--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
+        <activity android:name="com.raihanmahesa.pegawai.TambahPegawaiActivity"/>
+        <activity android:name="com.raihanmahesa.pegawai.DataPegawaiActivity"/>
+        <activity android:name="com.raihanmahesa.pelanggan.TambahPelangganActivity"/>
+        <activity android:name="com.raihanmahesa.pelanggan.DataPelangganActivity" />
         <activity
-            android:name=".pelanggan.TambahanPelangganActivity"
-            android:exported="false" />
-        <activity
-            android:name=".pelanggan.DataPelangganActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name="com.raihanmahesa.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
