--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,15 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
-        <activity android:name="com.raihanmahesa.pegawai.TambahPegawaiActivity"/>
-        <activity android:name="com.raihanmahesa.pegawai.DataPegawaiActivity"/>
-        <activity android:name="com.raihanmahesa.pelanggan.TambahPelangganActivity"/>
+        <activity android:name="com.raihanmahesa.pegawai.TambahPegawaiActivity" />
+        <activity android:name="com.raihanmahesa.pegawai.DataPegawaiActivity" />
+        <activity android:name="com.raihanmahesa.pelanggan.TambahPelangganActivity" />
         <activity android:name="com.raihanmahesa.pelanggan.DataPelangganActivity" />
         <activity
             android:name="com.raihanmahesa.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
