--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
         <activity
+            android:name="com.raihanmahesa.transaksi.PilihLayananTambahanActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.raihanmahesa.transaksi.PilihLayananActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.raihanmahesa.transaksi.PilihPelangganActivity"
+            android:exported="false" />
+        <activity
             android:name="com.raihanmahesa.transaksi.DataTransaksiActivity"
             android:exported="false" />
         <activity
