--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-feature
         android:name="android.hardware.bluetooth"
         android:required="false" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
+        <activity
+            android:name="com.raihanmahesa.akun.DataAkunActivity"
+            android:exported="false" />
         <activity
             android:name="com.raihanmahesa.RegisterActivity"
             android:exported="false" />
@@ -87,7 +89,7 @@
             android:exported="false" />
         <activity
             android:name="com.raihanmahesa.MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
