--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-feature
         android:name="android.hardware.bluetooth"
         android:required="false" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Laundry"
         tools:targetApi="31">
+        <activity
+            android:name="com.raihanmahesa.akun.EditProfileActivity"
+            android:exported="false" />
         <activity
             android:name="com.raihanmahesa.akun.DataAkunActivity"
             android:exported="false" />
